# merkle-wrapping-with-risc0

./: .gitignore  Cargo.toml  README.md
host/: Cargo.toml  data.rs  main.rs
host/src/: main.rs  only_stark.rs  stark_then_groth.rs
merkle_proof/: Cargo.toml  lib.rs
methods/guest/: Cargo.toml  main.rs
