[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host"
path = "main.rs"

[dependencies]
methods = { path = "../methods" }

merkle_proof = { path = "../merkle_proof" }

risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
