[package]
name = "merkle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "merkle"
path = "main.rs"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false }

merkle_proof = { path = "../../merkle_proof" }